Fixes and shit